<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Principal">

    <item android:id="@+id/action_resetar" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_estado" android:title="@string/action_add_estado"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_add_transiton" android:title="@string/action_add_transition"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_deleta_transiton" android:title="@string/action_delete_transition"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_altera_estado" android:title="@string/action_altera_estado"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_altera_transition" android:title="@string/action_altera_transition"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
